# mystiko-node

./: .eslintrc.yml  .gitignore  .prettierrc  .yarnrc.yml  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml  build-napi.yml  build.yml  ci.yml  lint.yml  publish.yml
__test__/: account.spec.ts  config.spec.ts  mystiko.spec.ts  wallet.spec.ts
napi/: .prettierignore  Cargo.toml  Cross.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
napi/__test__/: base.ts
napi/__test__/files/: full.json
napi/npm/android-arm-eabi/: README.md  package.json
napi/npm/android-arm64/: README.md  package.json
napi/npm/darwin-arm64/: README.md  package.json
napi/npm/darwin-x64/: README.md  package.json
napi/npm/freebsd-x64/: README.md  package.json
napi/npm/linux-arm-gnueabihf/: README.md  package.json
napi/npm/linux-arm64-gnu/: README.md  package.json
napi/npm/linux-arm64-musl/: README.md  package.json
napi/npm/linux-x64-gnu/: README.md  package.json
napi/npm/linux-x64-musl/: README.md  package.json
napi/npm/win32-arm64-msvc/: README.md  package.json
napi/npm/win32-ia32-msvc/: README.md  package.json
napi/npm/win32-x64-msvc/: README.md  package.json
napi/src/: lib.rs  mystiko.rs
napi/src/config/: api.rs
napi/src/handler/: account.rs  deposit.rs  spend.rs  wallet.rs
napi/src/scanner/: handler.rs
napi/src/synchronizer/: handler.rs
napi/tests/: account.spec.ts  base.ts  config.spec.ts  mystiko.spec.ts  wallet.spec.ts
napi/tests/files/: full.json
node/: .eslintignore  .eslintrc.yml  .prettierignore  README.md  jest.config.js  package.json  tsconfig.json
node/src/: index.ts  mystiko.ts
node/src/common/: error.ts  (+1 more)
node/tests/: mystiko.test.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/handler/: wallet.rs
(+18 files in other folders)
